@@ -1,2 +1,0 @@
-TreeText is multi documents editor.
-This editor is usable as an outline processor.
