@@ -1,2 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2001/08/05 17:18:52 sakamoto Exp $
-bin/treetext
