@@ -1,4 +1,0 @@
-$NetBSD$
-
-SHA1 (TreeText-0.3.3-src.zip) = 38c05a1daab47c53f1de8f46079e3caf1d0a1551
-Size (TreeText-0.3.3-src.zip) = 81251 bytes
